Creada nueva pagina

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ gitlab
               <a class="nav-link" href="formulario-de-registro.html">Registrarme</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="detalle-producto.html">Detalle de producto</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="formulario-de-producto.html" tabindex="-1" aria-disabled="true">Productos</a>
             </li>
           </ul>
