se agregan portadas al carrousel

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <!-- <link rel="stylesheet" href="bootstrap-icons.css"> -->
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <!-- Custom styles for this template -->
   <link href="carousel.css" rel="stylesheet">
 
@@ -23,10 +26,7 @@
 </head>
 
 <body>
-github
-bitbucket
-Yani
-
+  
   <header>
     <nav class="navbar navbar-expand-md navbar-ligth fixed-top bg-ligth">
       <div class="container-fluid">
@@ -39,10 +39,11 @@ Yani
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home <i class="bi bi-house-fill"></i>
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="formulario-de-registro.html">Registrarme</a>
+              <a class="nav-link" href="formulario-de-registro.html">Registrarme <i class="bi bi-person-fill"></i> </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="detalle-producto.html">Detalle de producto</a>
@@ -53,6 +54,7 @@ Yani
           </ul>
 
           <i class="bi bi-search"></i>
+          <i class="bi bi-cart-plus-fill"></i>
 
 
         </div>
@@ -71,44 +73,31 @@ Yani
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+          <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
             aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
             <rect width="100%" height="100%" fill="#777" />
-          </svg>
+          </svg> -->
+          <img src="imgs/portada.jpg" alt="portada1">
 
           <div class="container">
             <div class="carousel-caption text-start">
-              <h1>Example headline.</h1>
-              <p>Some representative placeholder content for the first slide of the carousel.</p>
-              <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+
             </div>
           </div>
         </div>
         <div class="carousel-item">
-          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-            aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <rect width="100%" height="100%" fill="#777" />
-          </svg>
+          <img src="imgs/portada 2.jpg" alt="portada2">
 
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Some representative placeholder content for the second slide of the carousel.</p>
-              <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
             </div>
           </div>
         </div>
         <div class="carousel-item">
-          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-            aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <rect width="100%" height="100%" fill="#777" />
-          </svg>
+          <img src="imgs/portada 3.jpg" alt="portada3">
 
           <div class="container">
             <div class="carousel-caption text-end">
-              <h1>One more for good measure.</h1>
-              <p>Some representative placeholder content for the third slide of this carousel.</p>
-              <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
             </div>
           </div>
         </div>
@@ -455,6 +444,9 @@ Yani
 
   <!-- <script src="bootstrap.bundle.min.js"></script> -->
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
 
 </body>
 
