cambios en la navbar

--- a/index.html
+++ b/index.html
@@ -14,23 +14,20 @@
   <!-- <link rel="stylesheet" href="bootstrap-icons.css"> -->
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
   <!-- Custom styles for this template -->
   <link href="carousel.css" rel="stylesheet">
-
 
 
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  
+
   <header>
     <nav class="navbar navbar-expand-md navbar-ligth fixed-top bg-ligth">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">WENEME</a>
+        <a class="navbar-brand" href="#"> <img src="imgs/logo-WNM.png" alt="logo-WNM" height="60"></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,23 +36,27 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home <i class="bi bi-house-fill"></i>
+              <a class="nav-link active" aria-current="page" href="index.html">Home
+                <i class="bi bi-house-fill"></i>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="formulario-de-registro.html">Registrarme <i class="bi bi-person-fill"></i> </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="detalle-producto.html">Detalle de producto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="formulario-de-producto.html" tabindex="-1" aria-disabled="true">Productos</a>
+              <a class="nav-link" href="formulario-de-producto.html" tabindex="-1" aria-disabled="true">Producto <i
+                  class="bi bi-cloud-arrow-up-fill"></i></a>
             </li>
           </ul>
 
-          <i class="bi bi-search"></i>
-          <i class="bi bi-cart-plus-fill"></i>
-
+          <ul class="navbar-nav mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#"> <i class="bi bi-heart" title="Ver favoritos"></i> </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> <i class="bi bi-cart-plus-fill" title="Ver Carrito"></i></a>
+            </li>
+          </ul>
 
         </div>
       </div>
@@ -445,8 +446,9 @@
   <!-- <script src="bootstrap.bundle.min.js"></script> -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-    crossorigin="anonymous"></script>
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+
+    </script>
 
 </body>
 
