--- a/formulario-de-producto.html
+++ b/formulario-de-producto.html
@@ -17,6 +17,7 @@
 
   <!-- Custom styles for this template -->
   <link href="form-validation.css" rel="stylesheet">
+
   <link rel="stylesheet" href="styles.css">
 
 
@@ -27,9 +28,9 @@
   <div class="container">
 
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <nav class="navbar navbar-expand-md navbar-ligth fixed-top bg-ligth">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Carousel</a>
+          <a class="navbar-brand" href="#"> <img src="imgs/logo-WNM.png" alt="logo-WNM" height="60"></a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,19 +39,28 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home
+                  <i class="bi bi-house-fill"></i>
+                </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="formulario-de-registro.html">Registrarme</a>
+                <a class="nav-link" href="formulario-de-registro.html">Registrarme <i class="bi bi-person-fill"></i>
+                </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="formulario-de-producto.html" tabindex="-1"
-                  aria-disabled="true">Productos</a>
+                <a class="nav-link active" href="formulario-de-producto.html" tabindex="-1" aria-disabled="true">Producto <i
+                    class="bi bi-cloud-arrow-up-fill"></i></a>
               </li>
             </ul>
 
-            <i class="bi bi-search"></i>
-
+            <ul class="navbar-nav mb-2 mb-md-0">
+              <li class="nav-item">
+                <a class="nav-link" href="#"> <i class="bi bi-heart" title="Ver favoritos"></i> </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"> <i class="bi bi-cart-plus-fill" title="Ver Carrito"></i></a>
+              </li>
+            </ul>
 
           </div>
         </div>
@@ -260,10 +270,10 @@ Envíos a todo el país:
     </footer>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
 
-  <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
-  <script src="form-validation.js"></script>
+  </script>
 </body>
 
 </html>
