--- a/detalle-producto.html
+++ b/detalle-producto.html
@@ -10,43 +10,50 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">WENEME</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="formulario-de-registro.html">Registrarme</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="detalle-producto.html">Detalle de producto</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="formulario-de-producto.html" tabindex="-1" aria-disabled="true">Productos</a>
-                    </li>
-                  </ul>
-                  <ul class="navbar-nav mb-2 mb-md-0">
-                    <li class="nav-item">
-                      <a class="nav-link" href="#"> <i class="bi bi-heart" title="Ver favoritos"></i> </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#"> <i class="bi bi-cart-plus-fill" title="Ver Carrito"></i></a>
-                    </li>
-                  </ul>
-            </div>
-          </div>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"> WENEME</a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+          aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home
+                <i class="bi bi-house-fill"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="detalle-producto.html">Detalle <i class="bi bi-person-fill"></i> </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="formulario-de-registro.html">Registrarme <i class="bi bi-person-fill"></i> </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="formulario-de-producto.html" tabindex="-1" aria-disabled="true">Producto <i
+                  class="bi bi-cloud-arrow-up-fill"></i></a>
+            </li>
+          </ul>
+
+          <ul class="navbar-nav mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#"> <i class="bi bi-heart" title="Ver favoritos"></i> </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> <i class="bi bi-cart-plus-fill" title="Ver Carrito"></i></a>
+            </li>
+          </ul>
+
         </div>
-      </nav>
+      </div>
+    </nav>
+  </header>
 
 
       <section id="nombre-producto">
@@ -60,7 +67,7 @@
             <div class="row">
               <div class="col-sm-6 cuadritos">
                 <figure class="figure">
-                    <img src="./img/V2115711_BN_1.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <img src="./imgs/V2115711_BN_1.jpg" class="figure-img img-fluid rounded" alt="...">
                     <figcaption class="figure-caption">A caption for the above image.</figcaption>
                   </figure>
               </div>
