geniales mis cambios

--- a/detalle-producto.html
+++ b/detalle-producto.html
@@ -16,7 +16,7 @@
   <header>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"> WENEME</a>
+        <a class="navbar-brand" href="index.html"> WEENEEMY</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -143,11 +143,14 @@
 
 
 
+   <!-- FOOTER -->
 
-      <footer class="footer-piola container-fluid my-4 py-4">
-        <p>Author: Hege Refsnes</p>
-        <p><a href="listado-productos.html">Otra pagina</a></p>
-      </footer>
+
+   <footer class="footer-piola container-fluid my-4 py-4">
+    <p>Author: Hege Refsnes</p>
+    <p><a href="listado-productos.html">Otra pagina</a></p>
+  </footer>
+    
 
     
 
