--- a/formulario-de-producto.html
+++ b/formulario-de-producto.html
@@ -23,49 +23,52 @@
 
 </head>
 
-<body class="bg-light">
+<body>
+  
 
+  <header>
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"> WEENEEMY</a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+          aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home
+                <i class="bi bi-house-fill"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="detalle-producto.html">Detalle <i class="bi bi-person-fill"></i> </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="formulario-de-registro.html">Registrarme <i class="bi bi-person-fill"></i> </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="formulario-de-producto.html" tabindex="-1" aria-disabled="true">Producto <i
+                  class="bi bi-cloud-arrow-up-fill"></i></a>
+            </li>
+          </ul>
+
+          <ul class="navbar-nav mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#"> <i class="bi bi-heart" title="Ver favoritos"></i> </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> <i class="bi bi-cart-plus-fill" title="Ver Carrito"></i></a>
+            </li>
+          </ul>
+
+        </div>
+      </div>
+    </nav>
+  </header>
   <div class="container">
 
-    <header>
-      <nav class="navbar navbar-expand-md navbar-ligth fixed-top bg-ligth">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"> <img src="imgs/logo-WNM.png" alt="logo-WNM" height="60"></a>
-
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Home
-                  <i class="bi bi-house-fill"></i>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="formulario-de-registro.html">Registrarme <i class="bi bi-person-fill"></i>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="formulario-de-producto.html" tabindex="-1" aria-disabled="true">Producto <i
-                    class="bi bi-cloud-arrow-up-fill"></i></a>
-              </li>
-            </ul>
-
-            <ul class="navbar-nav mb-2 mb-md-0">
-              <li class="nav-item">
-                <a class="nav-link" href="#"> <i class="bi bi-heart" title="Ver favoritos"></i> </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"> <i class="bi bi-cart-plus-fill" title="Ver Carrito"></i></a>
-              </li>
-            </ul>
-
-          </div>
-        </div>
-      </nav>
-    </header>
     <main class="main-formularios">
 
       <div class="row g-5">
@@ -259,15 +262,14 @@ Envíos a todo el país:
             </div>
 
     </main>
+   <!-- FOOTER -->
 
-    <footer class="my-5 pt-5 text-muted text-center text-small">
-      <p class="mb-1">&copy; 2017–2021 Company Name</p>
-      <ul class="list-inline">
-        <li class="list-inline-item"><a href="#">Privacy</a></li>
-        <li class="list-inline-item"><a href="#">Terms</a></li>
-        <li class="list-inline-item"><a href="#">Support</a></li>
-      </ul>
-    </footer>
+
+   <footer class="footer-piola container-fluid my-4 py-4">
+    <p>Author: Hege Refsnes</p>
+    <p><a href="listado-productos.html">Otra pagina</a></p>
+  </footer>
+   
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
