cambios en la home

--- a/index.html
+++ b/index.html
@@ -112,70 +112,83 @@
       </div><!-- /.row -->
 
 
-      <!-- START THE FEATURETTES -->
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span>
-          </h2>
-          <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose
-            here.</p>
+      <div class="container">
+        <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <div class="card m-4 card-center">
+            <img src="imgs/body nena.png" class="card-img-top foto-ropa" alt="body beba">
+            <div class="card-body">
+              <h5 class="card-title tipo-producto">BODY AMAPOLA</h5>
+              <p class="card-text precio">$1500</p>
+            </div>
+            <div class="d-grid gap-2">
+             <button class="btn btn-primary" type="button"> Ver detalles </button>
+            </div>
+          </div>
         </div>
-        <div class="col-md-5">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-            preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-          </svg>
-
+        <div class="col-sm-12 col-md-6">
+          <div class="card m-4 card-center">
+            <img src="imgs/bodynene.png" class="card-img-top foto-ropa" alt="body nene">
+            <div class="card-body">
+              <h5 class="card-title tipo-producto">BODY ROMA</h5>
+              <p class="card-text precio">$1700</p>
+            </div>
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary" type="button"> Ver detalles </button>
+               </div>
+          </div>
         </div>
+        <div class="col-sm-12 col-md-6">
+          <div class="card m-4 card-center">
+            <img src="imgs/sweaternena.png" class="card-img-top foto-ropa" alt="sweater nena">
+            <div class="card-body">
+              <h5 class="card-title tipo-producto"> SWEATER UNICORNIO</h5>
+              <p class="card-text precio">$2900</p>
+            </div>
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary" type="button"> Ver detalles </button>
+               </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <div class="card m-4 card-center">
+            <img src="imgs/sweaternene.png" class="card-img-top foto-ropa" alt="sweater nene">
+            <div class="card-body">
+              <h5 class="card-title tipo-producto">SWEATER TEJIDO</h5>
+              <p class="card-text precio">$2500</p>
+            </div>
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary" type="button"> Ver detalles </button>
+               </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6">
+            <div class="card m-4 card-center">
+              <img src="imgs/parkanena.png" class="card-img-top foto-ropa" alt="parka nena">
+              <div class="card-body">
+                <h5 class="card-title tipo-producto">PARKA JULI</h5>
+                <p class="card-text precio">$6000</p>
+              </div>
+              <div class="d-grid gap-2">
+                <button class="btn btn-primary" type="button"> Ver detalles </button>
+               </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 text-center">
+            <div class="card m-4 card-center">
+              <img src="imgs/parkanene.png" class="card-img-top foto-ropa" alt="parka nene">
+              <div class="card-body">
+                <h5 class="card-title tipo-producto">PARKA TOMI</h5>
+                <p class="card-text precio">$6400</p>
+              </div>
+              <div class="d-grid gap-2">
+                <button class="btn btn-primary" type="button"> Ver detalles </button>
+               </div>
+            </div>
+          </div>
+
       </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this
-            layout would work with some actual real-world content in place.</p>
-        </div>
-        <div class="col-md-5 order-md-1">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-            preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-          </svg>
-
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really
-            intended to be actually read, simply here to give you a better view of what this would look like with some
-            actual content. Your content.</p>
-        </div>
-        <div class="col-md-5">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-            preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-          </svg>
-
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <!-- /END THE FEATURETTES -->
+     </div>
 
     </div><!-- /.container -->
 
