--- a/detalle-producto3.html
+++ b/detalle-producto3.html
@@ -70,14 +70,14 @@
       <div class="row">
         <div class="col-sm-6 cuadritos">
           <figure class="figure">
-            <img src="imgs/bodynene.png" class="figure-img img-fluid rounded" alt="body nene">
+            <img src="imgs/sweaternene.png" class="figure-img img-fluid rounded" alt="sweater nene">
             <figcaption class="figure-caption"></figcaption>
           </figure>
         </div>
         <div class="col-xs-12 col-sm-6 cuadritos">
           <div>
-            <h4 class="mb-3">BODY ROMA</h4>
-            <h5>$1.700</h5>
+            <h4 class="mb-3">SWEATER TEJIDO</h4>
+            <h5>$2.500</h5>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aliquam praesentium quam eaque rem sint,
               explicabo nulla at nemo nisi harum iure maiores magni illo dolores repudiandae laboriosam, rerum dolor.
             </p>
