--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <main>
 
-    <div class="container-fluid home-banner">
+    <div class="container-fluid home-banner mb-2">
 
 
 
@@ -108,7 +108,7 @@
 
       <div id="listado" class="container">
         <div class="row">
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-6 d-flex justify-content-center">
           <div class="card m-4 card-center">
             <img src="imgs/body nena.png" class="card-img-top foto-ropa" alt="body beba">
             <div class="card-body">
@@ -120,7 +120,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-6 d-flex justify-content-center">
           <div class="card m-4 card-center">
             <img src="imgs/bodynene.png" class="card-img-top foto-ropa" alt="body nene">
             <div class="card-body">
@@ -132,7 +132,7 @@
                </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-6 d-flex justify-content-center">
           <div class="card m-4 card-center">
             <img src="imgs/sweaternena.png" class="card-img-top foto-ropa" alt="sweater nena">
             <div class="card-body">
@@ -144,7 +144,7 @@
                </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-6 d-flex justify-content-center">
           <div class="card m-4 card-center">
             <img src="imgs/sweaternene.png" class="card-img-top foto-ropa" alt="sweater nene">
             <div class="card-body">
@@ -156,7 +156,7 @@
                </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-6 d-flex justify-content-center">
             <div class="card m-4 card-center">
               <img src="imgs/parkanena.png" class="card-img-top foto-ropa" alt="parka nena">
               <div class="card-body">
@@ -168,7 +168,7 @@
                </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-6 text-center">
+          <div class="col-sm-12 col-md-6 d-flex justify-content-center">
             <div class="card m-4 card-center">
               <img src="imgs/parkanene.png" class="card-img-top foto-ropa" alt="parka nene">
               <div class="card-body">
