--- a/detalle-producto2.html
+++ b/detalle-producto2.html
@@ -106,7 +106,7 @@
 
               <div class="row">
                 <div class="col mt-4">
-                  <button class="w-100 btn btn-primary btn-lg" type="submit">Añadir al carrito</button>
+                  <a href="formulario-de-producto.html" class="w-100 btn btn-primary btn-lg" type="submit">Comprar</a>
                 </div>
               </div>
 
