--- a/formulario-de-producto.html
+++ b/formulario-de-producto.html
@@ -147,18 +147,18 @@
             <form class="needs-validation" novalidate>
               <div class="row g-3">
                 <div class="col-sm-6">
-                  <label for="firstName" class="form-label">First name</label>
+                  <label for="firstName" class="form-label">Nombre</label>
                   <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
                   <div class="invalid-feedback">
-                    Valid first name is required.
+                    El nombre debe ser válido.
                   </div>
                 </div>
       
                 <div class="col-sm-6">
-                  <label for="lastName" class="form-label">Nombre y Apellido</label>
+                  <label for="lastName" class="form-label">Apellido</label>
                   <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
                   <div class="invalid-feedback">
-                    Este campo es obligatorio
+                    El apellido debe ser válido
                   </div>
                 </div>
       
